# DataProxyLibrary

./: .gitmodules  AbstractNode.hpp  AggregateStreamTransformer.hpp  AggregatorField.hpp  AtomicsJSONToCSVStreamTransformer.hpp  BlackoutStreamTransformer.hpp  BlackoutTransformerCommon.hpp  CampaignReferenceGeneratorStreamTransformer.hpp  ColumnAppenderStreamTransformer.hpp  ColumnFormatStreamTransformer.hpp  ColumnFormatterField.hpp  Counters.hpp  CustomEntityResolver.hpp  DPLCommon.hpp  DataProxyClient.hpp  DataProxyWrapper.cpp  DatabaseConnectionManager.hpp  DatabaseProxy.hpp  ExecutionProxy.hpp  GenericDPLDomain.hpp  GenericDPLDomainTestTypes.thpp  GroupingAggregateStreamTransformer.hpp  INodeFactory.hpp  JoinNode.hpp  LICENSE  LibDataProxy.i  LocalFileProxy.hpp  Makefile  NodeFactory.hpp  ParameterTranslator.hpp  PartitionNode.hpp  PreCampaignReferenceSerialization.thpp  ProxyUtilities.hpp  README.md  RestDataProxy.hpp  RestRequestBuilder.hpp  RestTypes.hpp  RouterNode.hpp  SelfDescribingStreamHeaderTransformer.hpp  ShellStreamTransformer.hpp  (+4 more)
DataProxy/: CMakeLists.txt  Version.txt
DataProxy/apps/Service/: CMakeLists.txt  DataProxyServiceConfig.hpp  DeleteHandler.hpp  PingHandler.hpp
DataProxy/apps/Service/cfg/: monitoring.json
DataProxy/apps/Service/include/: AbstractHandler.hpp  DataProxyService.hpp.in  DataProxyServiceConfig.hpp  LoadHandler.hpp
DataProxy/apps/Service/private/: AbstractHandler.cpp  DataProxyServiceConfig.cpp
DataProxy/apps/Service/src/: DataProxyService.cpp  DeleteHandler.cpp  PingHandler.cpp
DataProxy/apps/Service/systemtest/: DataProxyServiceSystest.cpp  DataProxyServiceSystest.hpp  system-main.cpp
DataProxy/apps/Service/test/: DataProxyServiceConfigTest.hpp  LoadHandlerTest.hpp  PingHandlerTest.cpp  PingHandlerTest.hpp  StoreHandlerTest.hpp
DataProxy/apps/Shell/: CMakeLists.txt  DataProxyShell.hpp  Makefile
DataProxy/apps/Shell/include/: DataProxyShell.hpp.in  DataProxyShellConfig.hpp
DataProxy/apps/Shell/src/: DataProxyShellConfig.cpp
DataProxy/apps/Shell/systemtest/: DataProxyShellSystest.cpp  DataProxyShellSystest.hpp  system-main.cpp
DataProxy/apps/Shell/test/: DataProxyShellConfigTest.cpp  DataProxyShellConfigTest.hpp  test-main.cpp
DataProxy/gdp/: DatabaseConnectionBinder.thpp  GenericDPLDomainTestTypes.thpp
DataProxy/include/: DPLCommon.hpp  DataProxyClient.hpp  GenericDPLDomain.hpp  ProxyUtilities.hpp
DataProxy/include/detail/: AbstractNode.hpp  AggregateStreamTransformer.hpp  AggregatorField.hpp  AwkUtilities.hpp  BlackoutStreamTransformer.hpp  BlackoutTransformerCommon.hpp  CampaignRevenueVectorStreamTransformer.hpp  ColumnAppenderStreamTransformer.hpp  ColumnFormatStreamTransformer.hpp  ColumnFormatterField.hpp  CustomEntityResolver.hpp  DPLVisibility.hpp  DatabaseConnectionManager.hpp  DatabaseProxy.hpp  EquivalenceClassStreamTransformer.hpp  ExecutionProxy.hpp  GroupingAggregateStreamTransformer.hpp  INodeFactory.hpp  JoinNode.hpp  LocalFileProxy.hpp  NodeFactory.hpp  ParameterTranslator.hpp  PartitionNode.hpp  PropertyDomain.hpp  ProxyUtilities.hpp  RequestForwarder.hpp  RestDataProxy.hpp  RestRequestBuilder.hpp  RestTypes.hpp  RouterNode.hpp  SelfDescribingStreamHeaderTransformer.hpp  ShellStreamTransformer.hpp  StreamTransformer.hpp  TransformerManager.hpp  TransformerUtilities.hpp
DataProxy/matlab/: DataProxyWrapper.cpp
DataProxy/matlab/syntaxHelper/: addParameter.m  dplLoad.m  dplPing.m  dplStore.m  dplStoreFromFile.m  dplTerminate.m
DataProxy/mock/: MockDataProxyClient.cpp  MockDataProxyClient.hpp  MockDatabaseConnectionManager.cpp  MockDatabaseConnectionManager.hpp  MockNode.cpp  MockNode.hpp  MockNodeFactory.cpp  MockNodeFactory.hpp  MockRequestForwarder.cpp  MockRequestForwarder.hpp  MockTransformFunctions.hpp  TestableDataProxyClient.cpp  TestableDataProxyClient.hpp  TestableNode.cpp  TestableNode.hpp
DataProxy/package/: install.sh
DataProxy/sharding/: createShards.pl  masterTables.sql  nodeTable.sql  setup.sh
DataProxy/src/: AbstractNode.cpp  AggregateStreamTransformer.cpp  AwkUtilities.cpp  BlackoutStreamTransformer.cpp  CampaignReferenceGeneratorStreamTransformer.cpp  ColumnAppenderStreamTransformer.cpp  ColumnFormatStreamTransformer.cpp  CustomEntityResolver.cpp  DataProxyClient.cpp  DatabaseConnectionManager.cpp  DatabaseProxy.cpp  EquivalenceClassStreamTransformer.cpp  ExecutionProxy.cpp  GroupingAggregateStreamTransformer.cpp  JoinNode.cpp  LocalFileProxy.cpp  NodeFactory.cpp  ParameterTranslator.cpp  PartitionNode.cpp  PropertyDomain.cpp  ProxyUtilities.cpp  RequestForwarder.cpp  RestDataProxy.cpp  RestRequestBuilder.cpp  RouterNode.cpp  SelfDescribingStreamHeaderTransformer.cpp  ShellStreamTransformer.cpp  StreamTransformer.cpp  TransformFunctionDomain.cpp  TransformerManager.cpp  TransformerUtilities.cpp
DataProxy/swig/: SwigDataProxy.i
DataProxy/test/: AbstractNodeTest.cpp  AbstractNodeTest.hpp  AggregateStreamTransformerTest.cpp  AggregateStreamTransformerTest.hpp  AtomicsJSONToCSVStreamTransformerTest.cpp  AtomicsJSONToCSVStreamTransformerTest.hpp  AwkUtilitiesTest.cpp  BlackoutStreamTransformerTest.cpp  BlackoutStreamTransformerTest.hpp  CampaignReferenceGeneratorStreamTransformerTest.hpp  ColumnAppenderStreamTransformerTest.cpp  ColumnAppenderStreamTransformerTest.hpp  ColumnFormatStreamTransformerTest.cpp  ColumnFormatStreamTransformerTest.hpp  DataProxyClientTest.cpp  DataProxyClientTest.hpp  DataProxyWrapperTest.cpp  DataProxyWrapperTest.hpp  DatabaseConnectionManagerTest.cpp  DatabaseConnectionManagerTest.hpp  DatabaseProxyTest.cpp  DatabaseProxyTest.hpp  EquivalenceClassStreamTransformerTest.cpp  ExecutionProxyTest.cpp  ExecutionProxyTest.hpp  GenericDPLDomainTest.cpp  GenericDPLDomainTest.hpp  GroupingAggregateStreamTransformerTest.cpp  GroupingAggregateStreamTransformerTest.hpp  JoinNodeTest.cpp  LocalFileProxyTest.cpp  LocalFileProxyTest.hpp  MATLABExecutor.cpp  MATLABExecutor.hpp  MatlabCommonLib.hpp  MultithreadDataProxyClientTest.cpp  MultithreadDataProxyClientTest.hpp  NodeFactoryTest.cpp  NodeFactoryTest.hpp  ParameterTranslatorTest.cpp  (+31 more)
Service/: Makefile  (+11 more)
(+278 files in other folders)
